# DPI

./: .gitignore  CMakeLists.txt  README.md  WINDOWS_SETUP.md  dpi_mt.py  dpi_simple.py  test_dpi.pcap  verify_port.py
include/: rule_manager.h
packet_analyzer_python/dpi_engine/: __init__.py  parser.py  pcap.py  rules.py  sni.py  types.py
src/: fast_path.cpp  rule_manager.cpp
